--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -406,13 +406,16 @@
             <li>"Using the last image as reference create an image of the same girl standing by a standmixer in a home kitchen with her back turned."</li>
             <li>"create another image with the girl now facing forward again and frosting a cake on a turn table, doing the crumb coat."</li>
             <li>"generate an image of a final cake with strawberries on top of the cake and some piping. Then add some hands of people reaching towards the cake ready to dig in."</li>
+            <li>"I am getting an error in my css code, provide improvement suggestions on how I can get the error to be fixed."</li>
           </ul>
         </div>
       </section>
     </main>
 
     <footer>
-      <p>© 2025 — All Rights Reserved 🍰</p>
+        <a href="./dardesigns.com/index.html">
+      <small>&copy; 2025 Dar Designs  🍰 </small>
+    </a>
     </footer>
   </div>
 
