--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -413,7 +413,7 @@
     </main>
 
     <footer>
-        <a href="./dardesigns.com">
+        <a href="https://zainab-dar.github.io/itis3135/dardesigns.com/index.html">
       <small>&copy; 2025 Dar Designs  🍰 </small>
     </a>
     </footer>
