--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -239,7 +239,7 @@
             <p>Over the last year, I've gotten into baking and decorating cakes, specifically tres leches cakes! I love experimenting with different cake themes, testing icing textures, and creating my own homemade fillings.</p>
             <figure>
               <img src="./images/ai_image_1.png" alt="cake supplies on a counter">
-              <figcaption><em>AI prompt used: "generate a photo of cake baking supplies on a counter."</em></figcaption>
+              <figcaption><em>essential cake baking supplies</em></figcaption>
             </figure>
           </article>
           <article class="card">
@@ -264,8 +264,8 @@
             <h3>Who Am I</h3>
             <p>I'm Zainab! I started cake decorating after watching several TikTok videos of cake decorators making the most intricate and yummy cakes and being inspired to do the same.</p>
             <figure>
-              <img src="./images/ai_image_2.png" alt="Cake decorating setup">
-              <figcaption><em>AI prompt used: "generate a cartoon photo of a hijabi girl decorating a cake."</em></figcaption>
+              <img src="./images/ai_image_2.png" alt="Decorating a cake with whipped cream">
+              <figcaption><em>focus and precision are essential components of cake decorating</em></figcaption>
             </figure>
           </article>
           <article class="card">
@@ -334,7 +334,7 @@
             <p>I typically bake in my home kitchen. I usually make one cake at a time so am not in need of a bigger space. The biggest cake I've baked was a seven-layer two-tier cake that I had to store as two separate cakes until it was close to the event time and I could stack them.</p>
             <figure>
               <img src="./images/ai_image_3.png" alt="girl using standmixer at a Home kitchen counter">
-              <figcaption><em>AI prompt used: "Using the last image as reference create an image of the same girl standing by a standmixer in a home kitchen with her back turned."</em></figcaption>
+              <figcaption><em>whipping up whipped cream for the cake!</em></figcaption>
             </figure>
           </article>
           <article class="card">
@@ -360,7 +360,7 @@
             </ul>
             <figure>
               <img src="./images/ai_image_4.png" alt="girl frosting cake on turn table">
-              <figcaption><em>AI prompt used: "create another image with the girl now facing forward again and frosting a cake on a turn table, doing the crumb coat."</em></figcaption>
+              <figcaption><em>adding the finishing touches</em></figcaption>
             </figure>
           </article>
           <article class="card">
