--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -397,7 +397,7 @@
       </section>
 
       <section id="ai">
-        <h2>AI Prompts</h2>
+        <h2>Making Cakes ~ AI Prompts</h2>
         <div class="card">
           <p><strong>AI Prompts used:</strong></p>
           <ul>
