--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -239,7 +239,7 @@
             <p>Over the last year, I've gotten into baking and decorating cakes, specifically tres leches cakes! I love experimenting with different cake themes, testing icing textures, and creating my own homemade fillings.</p>
             <figure>
               <img src="./images/ai_image_1.png" alt="cake supplies on a counter">
-              <figcaption><em>essential cake baking supplies</em></figcaption>
+              <figcaption><em>AI prompt used: "generate a photo of cake baking supplies on a counter."</em></figcaption>
             </figure>
           </article>
           <article class="card">
@@ -265,7 +265,7 @@
             <p>I'm Zainab! I started cake decorating after watching several TikTok videos of cake decorators making the most intricate and yummy cakes and being inspired to do the same.</p>
             <figure>
               <img src="./images/ai_image_2.png" alt="Decorating a cake with whipped cream">
-              <figcaption><em>focus and precision are essential components of cake decorating</em></figcaption>
+              <figcaption><em>AI prompt used: "generate a cartoon photo of a hijabi girl decorating a cake."</em></figcaption>
             </figure>
           </article>
           <article class="card">
@@ -287,7 +287,7 @@
             <p>I bake all year round; each season inspires new flavors and decorations. Most recently, for my sister's wedding, I got to make several cakes for her events which was incredibly special.</p>
             <figure>
               <img src="./images/cake_5.jpg" alt="orange cake with mr and mrs cake topper and pink and orange flowers">
-              <figcaption><em>This is a picture of a cake I made for one of my sister's pre-wedding events! It was very fun to make and everyone loved it.</em></figcaption>
+              <figcaption><em>AI prompt used: "Using the last image as reference create an image of the same girl standing by a standmixer in a home kitchen with her back turned."</em></figcaption>
             </figure>
           </article>
           <article class="card">
@@ -334,7 +334,7 @@
             <p>I typically bake in my home kitchen. I usually make one cake at a time so am not in need of a bigger space. The biggest cake I've baked was a seven-layer two-tier cake that I had to store as two separate cakes until it was close to the event time and I could stack them.</p>
             <figure>
               <img src="./images/ai_image_3.png" alt="girl using standmixer at a Home kitchen counter">
-              <figcaption><em>whipping up whipped cream for the cake!</em></figcaption>
+              <figcaption><em>AI prompt used: "Using the last image as reference create an image of the same girl standing by a standmixer in a home kitchen with her back turned."</em></figcaption>
             </figure>
           </article>
           <article class="card">
@@ -360,7 +360,7 @@
             </ul>
             <figure>
               <img src="./images/ai_image_4.png" alt="girl frosting cake on turn table">
-              <figcaption><em>adding the finishing touches</em></figcaption>
+              <figcaption><em>AI prompt used: "create another image with the girl now facing forward again and frosting a cake on a turn table, doing the crumb coat."</em></figcaption>
             </figure>
           </article>
           <article class="card">
