--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -264,7 +264,7 @@
             <h3>Who Am I</h3>
             <p>I'm Zainab! I started cake decorating after watching several TikTok videos of cake decorators making the most intricate and yummy cakes and being inspired to do the same.</p>
             <figure>
-              <img src="./images/ai_image_2.png" alt="Decorating a cake with whipped cream">
+              <img src="./images/ai_image_2.png" alt="Cake decorating setup">
               <figcaption><em>AI prompt used: "generate a cartoon photo of a hijabi girl decorating a cake."</em></figcaption>
             </figure>
           </article>
@@ -274,7 +274,7 @@
           </article>
           <article class="card">
             <h3>My Inspiration</h3>
-            <p>My biggest inspiration comes from professional bakers on social media. I eventually decided to give it a shot myself and bake a cake for a small home gathering. I'm still constantly learning new techniques and challenging myself with more complex designs and growing every single day.</p>
+            <p>My biggest inspiration comes from professional bakers on social media and my own family traditions. My grandmother used to make simple cakes for every birthday, and I wanted to carry on that tradition while adding my own creative twist. I'm constantly learning new techniques and challenging myself with more complex designs.</p>
           </article>
         </div>
       </section>
@@ -287,7 +287,7 @@
             <p>I bake all year round; each season inspires new flavors and decorations. Most recently, for my sister's wedding, I got to make several cakes for her events which was incredibly special.</p>
             <figure>
               <img src="./images/cake_5.jpg" alt="orange cake with mr and mrs cake topper and pink and orange flowers">
-              <figcaption><em>AI prompt used: "Using the last image as reference create an image of the same girl standing by a standmixer in a home kitchen with her back turned."</em></figcaption>
+              <figcaption><em>This is a picture of a cake I made for one of my sister's pre-wedding events! It was very fun to make and everyone loved it.</em></figcaption>
             </figure>
           </article>
           <article class="card">
@@ -306,15 +306,15 @@
                 </tr>
                 <tr>
                   <td>Summer</td>
-                  <td>Mango, Peach, tres leches</td>
+                  <td>Mango, Peach, Tropical</td>
                 </tr>
                 <tr>
                   <td>Fall</td>
-                  <td>Pumpkin Spice, tres leches</td>
+                  <td>Pumpkin Spice, Apple Cinnamon</td>
                 </tr>
                 <tr>
                   <td>Winter</td>
-                  <td>Chocolate, tres leches, biscoff </td>
+                  <td>Chocolate, Peppermint, Eggnog</td>
                 </tr>
               </tbody>
             </table>
@@ -339,11 +339,11 @@
           </article>
           <article class="card">
             <h3>My Baking Setup</h3>
-            <p>My kitchen has a dedicated corner for cake decorating with all my tools organized and ready to go. I have a stand mixer, multiple cake pans in different sizes, a turntable for decorating, and various piping tips and spatulas.</p>
+            <p>My kitchen has a dedicated corner for cake decorating with all my tools organized and ready to go. I have a stand mixer, multiple cake pans in different sizes, a turntable for decorating, and various piping tips and spatulas. Storage is key - I keep my ingredients fresh and my workspace clean to ensure the best results.</p>
           </article>
           <article class="card">
             <h3>Where I Source Ingredients</h3>
-            <p>I get most of my baking supplies from local grocery stores, but for specialty items like unique sprinkles, food coloring, and cake decorating tools, I shop at hobby lobby or order online. I solely use fresh fruits and make my fillings and whip from scratch which really makes a difference in the flavor of my fillings and toppings.</p>
+            <p>I get most of my baking supplies from local grocery stores, but for specialty items like unique sprinkles, food coloring, and cake decorating tools, I shop at craft stores or order online. Fresh fruits come from the farmer's market when in season, which really makes a difference in the flavor of my fillings and toppings.</p>
           </article>
         </div>
       </section>
@@ -365,11 +365,11 @@
           </article>
           <article class="card">
             <h3>My Process Step-by-Step</h3>
-            <p>First, I bake the cake layers and let them cool completely. Then I level each layer and soak them with the tres leches mixture. After refrigerating overnight, I apply a crumb coat of whipped icing and chill again. Finally, I add the final layer of frosting, pipe decorations, and stack the layers with fresh filligns and other toppings. Each step requires patience but the end results are worth it.</p>
+            <p>First, I bake the cake layers and let them cool completely. Then I level each layer and brush them with the tres leches mixture. After refrigerating overnight, I apply a crumb coat of whipped icing and chill again. Finally, I add the final layer of frosting, pipe decorations, and add fresh fruit or other toppings. Each step requires patience but the results are worth it.</p>
           </article>
           <article class="card">
             <h3>Essential Tools</h3>
-            <p>The most important tools for making my cakes are my offset spatula for smooth frosting, piping bags with various tips for decorative work, a cake turntable for even coating, and a good quality stand mixer, i truly couldn't manage having to hand whip everything. I also can't live without my cake leveler, bench scraper, and dowel rods for multi-tiered cakes.</p>
+            <p>The most important tools in my arsenal are my offset spatula for smooth frosting, piping bags with various tips for decorative work, a cake turntable for even coating, and a good quality stand mixer. I also can't live without my cake leveler, bench scraper, and dowel rods for multi-tiered cakes.</p>
           </article>
         </div>
       </section>
@@ -397,40 +397,47 @@
       </section>
 
       <section id="ai">
-        <h2>Making Cakes ~ AI Prompts</h2>
+        <h2>AI Prompts</h2>
         <div class="card">
-          <p><strong>AI Prompts used:</strong></p>
+          <p><strong>AI Prompts used for images:</strong></p>
           <ul>
-            <li>"generate a photo of cake baking supplies on a counter."</li>
-            <li>"generate a cartoon photo of a hijabi girl decorating a cake."</li>
-            <li>"Using the last image as reference create an image of the same girl standing by a standmixer in a home kitchen with her back turned."</li>
-            <li>"create another image with the girl now facing forward again and frosting a cake on a turn table, doing the crumb coat."</li>
-            <li>"generate an image of a final cake with strawberries on top of the cake and some piping. Then add some hands of people reaching towards the cake ready to dig in."</li>
-            <li>"I am getting an error in my css code, provide improvement suggestions on how I can get the error to be fixed."</li>
+            <li>"photo of a decorated tres leches cake on a wooden counter"</li>
+            <li>"person decorating a cake with piping bag on a pastel counter"</li>
+            <li>"pastel wedding cake with floral piping on white stand"</li>
+            <li>"home kitchen counter with cake baking tools and stand mixer"</li>
+            <li>"layered cake getting crumb coated with icing spatula"</li>
+            <li>"friends smiling and eating homemade cake at a kitchen table"</li>
           </ul>
+          <p><em>I used AI only for image generation.</em></p>
         </div>
       </section>
     </main>
 
     <footer>
-        <a href="https://zainab-dar.github.io/itis3135/dardesigns.com/index.html">
-      <small>&copy; 2025 Dar Designs  🍰 </small>
-    </a>
+      <p>© 2025 — All Rights Reserved 🍰</p>
     </footer>
   </div>
 
   <script>
-    const navLinks = document.querySelectorAll(".nav-link");
-    const sections = document.querySelectorAll("section");
+    document.addEventListener('DOMContentLoaded', function() {
+      const navLinks = document.querySelectorAll(".nav-link");
+      const sections = document.querySelectorAll("section");
 
-    navLinks.forEach((link) => {
-      link.addEventListener("click", () => {
-        sections.forEach((section) => section.classList.remove("active"));
-        navLinks.forEach((btn) => btn.removeAttribute("aria-current"));
+      navLinks.forEach((link) => {
+        link.addEventListener("click", () => {
+          // Remove active class from all sections
+          sections.forEach((section) => section.classList.remove("active"));
+          
+          // Remove aria-current from all buttons
+          navLinks.forEach((btn) => btn.removeAttribute("aria-current"));
 
-        const target = link.getAttribute("data-target");
-        document.getElementById(target).classList.add("active");
-        link.setAttribute("aria-current", "true");
+          // Add active class to target section
+          const target = link.getAttribute("data-target");
+          document.getElementById(target).classList.add("active");
+          
+          // Add aria-current to clicked button
+          link.setAttribute("aria-current", "true");
+        });
       });
     });
   </script>
