--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -84,13 +84,13 @@
     }
 
     section {
-      display: none !important;
+      display: none;
       padding: 1rem 0 2rem;
       border-radius: 12px;
     }
 
     section.active {
-      display: block !important;
+      display: block;
     }
 
     h2 {
