--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -72,6 +72,7 @@
           <button type="button" class="deleteCourse">Delete</button>
         </div>
         <button type="button" id="add-course-btn">Add Course</button>
+    
       </fieldset>
 
       <!-- Quote -->
@@ -88,7 +89,7 @@
       <div class="buttons">
         <button type="submit">Submit</button>
         <button type="reset">Reset</button>
-        <button type="button" id="clear-btn">Clear</button>
+        <button type="button" id="clear">Clear</button>
       </div>
     </form>
 
