--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
       <div id="content-wrapper">
         <p>
           Hi, my name is Zainab Dar, I am a Junior at UNC Charlotte, majoring in
-          Computer Science with a concentration in HCI. In my free time I enjoy
-          hanging out with my friend, shopping, and baking.
+          Computer Science with a concentration in Information Technology. In my free time I enjoy
+          hanging out with my friends, shopping, trying new cafes and baking cakes!
         </p>
         <p>
           On this page you will find links to my github, charlotte webpage, my
