--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     /* HEADER */
     header {
-      background: linear-gradient(135deg, #e3b7a0, #f4cfc2);
+      background: hsl(339, 44%, 72%);
       color: #ffffff;
       text-align: center;
       padding: 60px 20px 50px;
@@ -41,7 +41,7 @@
     }
 
     h2 {
-      color: #e3b7a0;
+      color:  hsl(339, 44%, 72%);
       text-align: center;
       font-size: 1.8em;
       margin: 40px 0 20px;
@@ -79,7 +79,7 @@
     }
 
     a:hover {
-      color: #b8876a;
+      color:  hsl(339, 44%, 72%);
       text-decoration: underline;
     }
 
@@ -117,7 +117,7 @@
 
     /* HOVER EFFECT ON FOOTER LINKS */
     .footer-nav a:hover {
-      color: #e3b7a0;
+      color: hsl(339, 44%, 72%);
     }
 
     /* RESPONSIVE */
