--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     /* HEADER */
     header {
-      background: hsl(339, 44%, 72%);
+      background: black;
       color: #ffffff;
       text-align: center;
       padding: 60px 20px 50px;
