--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     /* HEADER */
     header {
-      background: black;
+      background: #2b2b2b;
       color: #ffffff;
       text-align: center;
       padding: 60px 20px 50px;
@@ -38,6 +38,7 @@
       margin: 0;
       letter-spacing: 1px;
       font-weight: 700;
+      color:  hsl(339, 67%, 91%);
     }
 
     h2 {
