--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -3,16 +3,16 @@
 <head>
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-  <script>hljs.highlightAll();</script>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Introduction Form</title>
   <link rel="stylesheet" href="styles/default.css">
   <script src="scripts/introduction.js" defer></script>
+  <script src="scripts/generate_json.js" defer></script>
 </head>
+
 <body>
   <header id="header"></header>
   
