--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="styles/default.css">
   <script src="scripts/introduction.js" defer></script>
   <script src="scripts/generate_json.js" defer></script>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
