--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -97,7 +97,7 @@
 
     <div id="result-container"></div>
   </main>
-  <script src="generate_json.js"></script>
+  <script src="scripts/generate_json.js"></script>
   <footer id="footer"></footer>
 
 </body>
