--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="styles/default.css">
   <script src="scripts/introduction.js" defer></script>
   <script src="scripts/generate_json.js" defer></script>
+  <script src="scripts/generate_html.js" defer></script>
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 
 </head>
@@ -72,10 +73,7 @@
           <input type="text" placeholder="Course Number (e.g., 3135)" required>
           <input type="text" placeholder="Course Name" required>
           <input type="text" placeholder="Reason for Taking" required>
-          <button type="button" class="deleteCourse">Delete</button>
         </div>
-          <button type="button" id="add-course-btn">Add Course</button>
-          <button type="button" id="generateJsonBtn">Generate JSON</button>
 
       </fieldset>
 
@@ -92,6 +90,10 @@
         <button type="submit">Submit</button>
         <button type="reset">Reset</button>
         <button type="button" id="clear">Clear</button>
+        <button type="button" id="generateHtmlBtn">Generate HTML</button>
+        <button type="button" id="add-course-btn">Add Course</button>
+        <button type="button" id="generateJsonBtn">Generate JSON</button>
+        <button type="button" class="deleteCourse">Delete</button>
       </div>
     </form>
 
