--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -66,16 +66,13 @@
         <textarea id="personalStatement" name="personalStatement" required>Hi, I'm Zainab...</textarea>
       </fieldset>
 
-      <fieldset id="courses-container">
-        <legend>Courses</legend>
-        <div class="course">
-          <input type="text" placeholder="Department (e.g., ITIS)" required>
-          <input type="text" placeholder="Course Number (e.g., 3135)" required>
-          <input type="text" placeholder="Course Name" required>
-          <input type="text" placeholder="Reason for Taking" required>
-        </div>
+     <fieldset id="courses-container">
+      <legend>Courses</legend>
+      <div class="course"> ... </div>
+      <button type="button" id="add-course-btn">Add Course</button>
+      <button type="button" id="generateJsonBtn">Generate JSON</button>
+     </fieldset>
 
-      </fieldset>
 
       <fieldset>
         <legend>Quote</legend>
@@ -91,8 +88,6 @@
         <button type="reset">Reset</button>
         <button type="button" id="clear">Clear</button>
         <button type="button" id="generateHtmlBtn">Generate HTML</button>
-        <button type="button" id="add-course-btn">Add Course</button>
-        <button type="button" id="generateJsonBtn">Generate JSON</button>
         <button type="button" class="deleteCourse">Delete</button>
       </div>
     </form>
