--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -66,7 +66,8 @@
         <textarea id="personalStatement" name="personalStatement" required>Hi, I'm Zainab...</textarea>
       </fieldset>
 
-    <div id="coursesContainer">
+    <fieldset div id="coursesContainer">
+        <legend>Courses</legend>
         <div class="course">
           <input type="text" placeholder="Department (e.g., ITIS)" required>
           <input type="text" placeholder="Course Number (e.g., 3135)" required>
@@ -76,6 +77,7 @@
         </div>
         <button type="button" id="addCourseBtn">Add Course</button>
         </div>
+      </fieldset>
 
       <fieldset>
         <legend>Quote</legend>
