--- a/itis3135/intro_form.html
+++ b/itis3135/intro_form.html
@@ -66,18 +66,17 @@
         <textarea id="personalStatement" name="personalStatement" required>Hi, I'm Zainab...</textarea>
       </fieldset>
 
-    <fieldset div id="coursesContainer">
-        <legend>Courses</legend>
-        <div class="course">
-          <input type="text" placeholder="Department (e.g., ITIS)" required>
-          <input type="text" placeholder="Course Number (e.g., 3135)" required>
-          <input type="text" placeholder="Course Name" required>
-          <input type="text" placeholder="Reason for Taking" required>
-          <button type="button" class="deleteCourse">Delete</button>
-        </div>
-        <button type="button" id="addCourseBtn">Add Course</button>
-        </div>
-      </fieldset>
+    <fieldset id="coursesContainer">
+    <legend>Courses</legend>
+    <div class="course">
+      <input type="text" placeholder="Department (e.g., ITIS)" required>
+      <input type="text" placeholder="Course Number (e.g., 3135)" required>
+      <input type="text" placeholder="Course Name" required>
+      <input type="text" placeholder="Reason for Taking" required>
+      <button type="button" class="deleteCourse">Delete</button>
+    </div>
+    <button type="button" id="addCourseBtn">Add Course</button>
+    </fieldset>
 
       <fieldset>
         <legend>Quote</legend>
